# cache

./: .gitignore  CMakeLists.txt  README.md  cacheFunc.cpp  cacheMethods.cpp  cacheSetup.h  graph.dot  graphdump.cpp  lruMethods.cpp  main.cpp  makefile  result.txt  run
genious cache/: belady.hpp  go  main.cpp
genious_cache/: belady.hpp  main.cpp
source/: cacheMethods.cpp  cacheSetup.h  cacheSetup.hpp  fr_cache.cpp  fr_cache.hpp  graphDump.cpp  graph_dump.cpp  graphdump.cpp  lfuMethods.cpp  lfu_cache.cpp  lfu_cache.hpp  lruMethods.cpp  lru_cache.cpp  lru_cache.hpp  main.cpp  tests.cpp
